# Wammer

./: .gitignore  .travis.yml  README.md  dev-build.sh  direct_build.sh  meson.build
data/: com.github.ronnydo.wammer.appdata.xml  com.github.ronnydo.wammer.appdata.xml.in  com.github.ronnydo.wammer.desktop.in  com.github.ronnydo.wammer.gschema.xml  meson.build  org.freedesktop.policykit.wammer.policy
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.ronnydo.wammer.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+160 more)
po/extra/: POTFILES  extra.pot  fr.po  meson.build
src/: MainWindow.vala  Wammer.vala  meson.build
src/Services/: Jammer.vala  JammerState.vala  Settings.vala
src/Utils/: Utils.vala
